2011-04-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scintilla/gtk/ScintillaGTK.cxx:
   Fix X PRIMARY selection issue when Scintilla widget is
   unrealized/re-realized
   (Backport from Scintilla HG, original patch by Matthew Brush).


2011-04-04  Colomban Wendling  <colomban(at)geany(dot)org>

 * scintilla/gtk/PlatGTK.cxx:
   Fix font rendering in Scintilla when using Cairo.


2011-04-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Make Project->Properties the last menu item so it's faster to use.


2011-04-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scintilla/*:
   Update Scintilla to version 2.25.
 * version.txt, Makefile.am:
   Add Scintilla's version.txt file.
 * scintilla/makefile.win32, tagmanager/makefile.win32, makefile.win32:
   Replace escape character '\' by slash '/' in paths in the
   Windows Makefiles (patch by Matthew Brush, thanks).
 * src/tools.c:
   Reflect the existence of the entered command in `Set Custom Commands`
   dialog as well using the yes/no icon.


2011-04-03  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/main.c, src/prefs.c, src/tools.c:
   Fix loading and updating menu accelerators for custom commands.
 * src/prefs.c:
   Don't allow editing keybinding column of group rows.
 * src/tools.c:
   Fix ID of newly added commands in the `Set Custom Commands` dialog.


2011-04-02  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/tools.c, doc/geany.txt, doc/geany.html:
   Improve the `Set Custom Commands` dialog.


2011-04-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/interface.h, geany.glade:
   Rename Preferences dialog Interface subtab More -> Notebook tabs.
 * src/toolbar.c, src/dialogs.c:
   Use mimetype icon in File Properties dialog.
 * doc/geany.txt, doc/geany.html:
   Fix title capitalization.
 * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade: